@startuml
'https://plantuml.com/class-diagram

abstract class AbstractTreeTravelrsal
abstract class AbstractPresenter

class PreorderTreeTravelrsal
class InorderTreeTravelrsal
class PostorderTreeTravelrsal
class NormalOrderPresenter
class ReverseOrderPresenter
class Controller
class Node

Controller ..> AbstractTreeTravelrsal
Controller .u.> Node

PreorderTreeTravelrsal -u-|> AbstractTreeTravelrsal
InorderTreeTravelrsal -u-|> AbstractTreeTravelrsal
PostorderTreeTravelrsal -u-|> AbstractTreeTravelrsal
PreorderTreeTravelrsal ..> AbstractPresenter
InorderTreeTravelrsal ..> AbstractPresenter
PostorderTreeTravelrsal ..> AbstractPresenter

NormalOrderPresenter -u-|> AbstractPresenter
ReverseOrderPresenter -u-|> AbstractPresenter

@enduml